--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -23,6 +23,7 @@ $font-weights: (
     900: "wght" 900,
 );
 $font-sizes: (
+    12: 0.75rem,
     14: 0.875rem,
     16: $font-size-base,
     18: 1.125rem,
